feat: 引入 Vitest 測試框架並實作 PII 遮蔽測試\n\n- 安裝 vitest\n- 新增 src/security.test.ts\n- 更新 package.json test 腳本\n\nFixes #7

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "node -r ./dist/instrumentation.js dist/server.js",
     "lint": "eslint . --ext .ts",
     "format": "prettier --write .",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "vitest run"
   },
   "repository": {
     "type": "git",
@@ -38,6 +38,7 @@
     "eslint-plugin-prettier": "^5.5.5",
     "prettier": "^3.8.1",
     "typescript": "^5.9.3",
-    "typescript-eslint": "^8.54.0"
+    "typescript-eslint": "^8.54.0",
+    "vitest": "^4.0.18"
   }
 }
